tests/baselines/reference/internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.errors.txt
internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.ts(10,16): error TS2437: Module 'A' is hidden by a local declaration with the same name.


==== internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.ts (1 errors) ====
    class A {
        aProp: string;
    }
    namespace A {
        export interface X { s: string }
    }
    
    namespace B {
        var A = 1;
        import Y = A;
                   ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    